# docker_rust_axum_mysql

./: .env  Cargo.toml  Dockerfile  compose.yaml  tables.sql
src/: database_connection.rs  main.rs  routes.rs
